--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_with(model: @task, local: true) do |f| %>
   <%= f.label :content, 'タスク' %>
-  <%= f.text_filed :content %>
+  <%= f.text_field :content %>
   
-  <%= f.submit '作成'
+  <%= f.submit '作成' %>
 <% end %>
