--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -10,7 +10,9 @@
     </div>
     <% end %>
 
-  <%= f.label :content, 'タスク' %>
+  <%= f.label :title, 'タイトル' %>
+  <%= f.text_field :title %>
+  <%= f.label :content, 'タスク内容' %>
   <%= f.text_field :content %>
 
   <%= f.submit '投稿' %>
