--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -10,8 +10,8 @@
     </div>
     <% end %>
 
-  <%= f.label :title, 'タイトル' %>
-  <%= f.text_field :title %>
+  <%= f.label :status, 'タスクの状態' %>
+  <%= f.text_field :status %>
   <%= f.label :content, 'タスク内容' %>
   <%= f.text_field :content %>
 
